--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
@@ -10,7 +11,6 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
         <title>Omnifood</title>
     </head>
-
     <body>
         <header>
             <nav>
@@ -405,15 +405,5 @@
         </footer>        
     </body>
     <script src="//cdn.jsdeliver.net/respond/1.4.2/respond.min.js"></script>
-    <script src="//cdn.jsdeliver.net/html4shiv/3.7.2/html5shiv.min.js"></script>
-    
+    <script src="//cdn.jsdeliver.net/html4shiv/3.7.2/html5shiv.min.js"></script>    
 </html>
-
-<!--
-
-
-
-
-
-
--->
