added version 2 of favicon to work with github pages

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="manifest" href="/resources/favicons/site.webmanifest">
         <link rel="mask-icon" href="/resources/favicons/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="shortcut icon" href="/resources/favicons/favicon.ico">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://kalzero.github.io/Omnifood-Tuts/resources/favicons/favicon.ico?v=2">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="msapplication-config" content="/resources/favicons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
