--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </nav>
             <div class="hero-text-box">
                 <h1>Goodbye junk food. <br>Hello super healthy meals.</h1>
-                <a class="btn btn-full js--scroll-to-plans" href="#">I’m hungry</a>
+                <a class="btn btn-full js--scroll-to-plans">I’m hungry</a>
                 <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>                
             </div>            
         </header>
@@ -426,7 +426,7 @@
                 </p>
             </div>
         </footer>  
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
 <!--        <script src="http://maps.google.com/maps/api/js?sensor=true"></script>-->
         <script src="http://maps.google.com/maps/api/js?key=AIzaSyAj74Fq-ArSxu4uzhavk7IeZl9g1zSBFSk"></script>
 <!--
@@ -434,9 +434,9 @@
         <script src="//cdn.jsdeliver.net/html4shiv/3.7.2/html5shiv.min.js"></script>
         <script src="//cdn.jsdeliver.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
 -->
-        <script src="vendors/js/jquery.waypoints.min.js"></script>
+        <script src="vendors/js/noframework.waypoints.min.js"></script>
         <script src="vendors/js/gmaps.js"></script>
-        <script src="resources/js/jquery-script.js"></script>
+        <script src="resources/js/script.js"></script>
         
     </body>        
 </html>
