redesign.. teal buttons and using vanilla javascript instead of jQuery for behavior

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
-        <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+        <link rel="stylesheet" type="text/css" href="resources/css/style-teal.css">
         <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
         
@@ -44,8 +44,8 @@
             </nav>
             <div class="hero-text-box">
                 <h1>Goodbye junk food. <br>Hello super healthy meals.</h1>
-                <a class="btn btn-full js--scroll-to-plans">I’m hungry</a>
-                <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>                
+                <a class="btn btn-full js--scroll-to-plans" href="#plans">I’m hungry</a>
+                <a class="btn btn-ghost js--scroll-to-start" href="#features">Show me more</a>                
             </div>            
         </header>
         
