--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         </footer>  
 <!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
 <!--        <script src="http://maps.google.com/maps/api/js?sensor=true"></script>-->
-        <script src="http://maps.google.com/maps/api/js?key=AIzaSyAj74Fq-ArSxu4uzhavk7IeZl9g1zSBFSk"></script>
+        <script src="https://maps.google.com/maps/api/js?key=AIzaSyAj74Fq-ArSxu4uzhavk7IeZl9g1zSBFSk"></script>
 <!--
         <script src="//cdn.jsdeliver.net/respond/1.4.2/respond.min.js"></script>
         <script src="//cdn.jsdeliver.net/html4shiv/3.7.2/html5shiv.min.js"></script>
